# PropoertyBrowser4Demo

./: .gitignore  .gitmodules
.github/workflows/: build.yml
src/: CMakeLists.txt
src/App/: CMakeLists.txt
src/App/PropoertyBrowser4Demo/: CMakeLists.txt  MainWindow.cpp  MainWindow.ui  TestObjects.cpp  TestObjects.h  main.cpp
